k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: warehouse-cv
  labels:
    app.kubernetes.io/name: warehouse-cv
