k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warehouse-cv-ingress
  namespace: warehouse-cv
spec:
  ingressClassName: nginx
  rules:
    - host: intake.warehouse-cv.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intake-svc
                port:
                  number: 8081
    - host: inference.warehouse-cv.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inference-svc
                port:
                  number: 8082
    - host: dashboard.warehouse-cv.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-svc
                port:
                  number: 8080
